# git-branch-assistant

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.gradle.kts  install.sh  settings.gradle.kts  update
.github/: copilot-instructions.md
.run/: Simons Assistant.run.xml
git-assistant/: Cargo.toml
gradle/: libs.versions.toml
rust-version/: Cargo.toml
rust-version/src/: cleaner.rs  ui.rs
rust-version/src/commands/: git_clean.rs  mod.rs
rust-version/src/git/: mod.rs
rust-version/src/services/: git_repos_service.rs
src/: cache.rs  cleaner.rs  env.rs  fs_utils.rs  main.rs  picker.rs  repository.rs  task_result.rs  ui.rs
src/commands/: git_clean.rs  git_repos.rs
src/git/: git2_backend.rs  mod.rs  tests.rs
src/main/kotlin/tech/skagedal/assistant/: FileSystemHelpers.kt  LoggingConfigurator.kt  Main.kt  Repository.kt
src/main/kotlin/tech/skagedal/assistant/commands/: GitCleanCommand.kt  GitReposCommand.kt  SimonsAssistant.kt
src/main/kotlin/tech/skagedal/assistant/configuration/: ProcessEnvironment.kt
src/main/kotlin/tech/skagedal/assistant/git/: GitRepo.kt
src/main/kotlin/tech/skagedal/assistant/services/: GitReposService.kt
src/main/kotlin/tech/skagedal/assistant/ui/: UserInterface.kt
src/services/: git_repos_list_service.rs  git_repos_service.rs  mod.rs
tests/: generate-tests.sh
